--- a/web/static/css/main.css
+++ b/web/static/css/main.css
@@ -8,6 +8,9 @@
 .running {
     color: #2dff00;
 }
+.no-status {
+    color: #aaaaaa;
+}
 .nav-box {
     background-color: #484848;
     color: #9d9d9d;
