--- a/web/static/css/dashboard.css
+++ b/web/static/css/dashboard.css
@@ -44,8 +44,7 @@ body {
         padding: 20px;
         overflow-x: hidden;
         overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-        background-color: #353535;
-        border-right: 1px solid #353535;
+        background-color: #1c1c1c;
     }
 }
 
@@ -110,4 +109,16 @@ body {
 .placeholder img {
     display: inline-block;
     border-radius: 50%;
+}
+
+.nav-bottom {
+    position: fixed;
+    display: block;
+    overflow: hidden;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    color: #9d9d9d;
+    background-color: #282828;
+    padding: 10px;
 }
