--- a/web/static/css/editor.css
+++ b/web/static/css/editor.css
@@ -10,7 +10,7 @@ body {
     z-index: 0;
 }
 
-#folderViewShrink {
+.viewShrink {
     padding-right: 20px;
     padding-left: 20px;
     color: #9d9d9d;
@@ -22,16 +22,24 @@ body {
     float: right;
 }
 
-#folderViewShrink > span:hover {
+#fileViewShrink {
+    text-align: right;
+}
+
+#fileViewShrink > span {
+    float: left;
+}
+
+.viewShrink > span:hover {
     color: #d1d1d1;
 }
 
-#folderViewExpand {
+.viewExpand {
     color: #9d9d9d;
     font-size: 1.3em;
     font-weight: 700;
 }
-#folderViewExpand:hover {
+.viewExpand:hover {
     color: #d1d1d1;
 }
 
